Update Mockito version from 1.9.5 to 2.2.0
- Notable change in 2.x is any() nolonger accepts null.
- Device tests nolonger extend FabricAndroidTestCase
- mockito-core 1.9.5 -> 2.2.0
- com.google.dexmaker:dexmaker-mockito:1.2 -> com.linkedin.dexmaker:dexmaker-mockito:2.2.0

Change-Id: I231fdea70e8e373d8512e00b274858e3afdcc3f3

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -36,8 +36,8 @@ ext {
             junit                      : 'junit:junit:4.12',
             junitAddons                : 'junit-addons:junit-addons:1.4',
             robolectric                : 'org.robolectric:robolectric:3.2.2',
-            mockito                    : 'org.mockito:mockito-core:1.9.5',
-            dexmakerMockito            : 'com.google.dexmaker:dexmaker-mockito:1.2',
+            mockito                    : 'org.mockito:mockito-core:2.2.0',
+            dexmakerMockito            : 'com.linkedin.dexmaker:dexmaker-mockito:2.2.0',
 
             // Other
             picasso                    : 'com.squareup.picasso:picasso:2.5.2',
