--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,7 @@ out
 *.iws
 *.iml
 local.properties
+captures/
+.externalNativeBuild
 
-# Crashlytics files
-com_crashlytics_export_strings.xml
-manifest.txt
-crashlytics.keystore.properties
-crashlytics-build.properties
-
-# Fabric files
-fabric.properties
+twitter.properties
