--- a/twitter-unity/build.gradle
+++ b/twitter-unity/build.gradle
@@ -25,7 +25,7 @@ android {
     defaultConfig {
         versionCode 1
         versionName version
-        minSdkVersion rootProject.minSdkVersion.twitter
+        minSdkVersion rootProject.minSdkVersion
         consumerProguardFiles 'proguard.txt'
     }
 
