--- a/tweet-composer/build.gradle
+++ b/tweet-composer/build.gradle
@@ -24,7 +24,7 @@ android {
     defaultConfig {
         versionCode 1
         versionName version
-        minSdkVersion rootProject.minSdkVersion.twitter
+        minSdkVersion rootProject.minSdkVersion
     }
 
     buildTypes {
