--- a/twitter/internal-build.gradle
+++ b/twitter/internal-build.gradle
@@ -27,7 +27,7 @@ android {
     defaultConfig {
         versionCode 1
         versionName version
-        minSdkVersion rootProject.minSdkVersion.twitter
+        minSdkVersion rootProject.minSdkVersion
     }
 
     lintOptions {
