Update gradle deploy
Change-Id: I3f43af8f4dd723e1dfcf8c92f9435b97b12d046a

--- a/tweet-ui/gradle.properties
+++ b/tweet-ui/gradle.properties
@@ -15,16 +15,19 @@
 #
 #
 
-// The to be released version. When releasing, drop -SNAPSHOT. After releasing, bump version
-// number and add back -SNAPSHOT
+# The to be released version. When releasing, drop -SNAPSHOT. After releasing, bump version
+# number and add back -SNAPSHOT
 version=3.0.0-SNAPSHOT
 version_code=1
 
-pom_name=Android SDK Tweet Ui
+pom_name=Tweet Ui Android SDK
 pom_group_id=com.twitter.sdk.android
 pom_artifact_id=tweet-ui
 pom_packaging=aar
 
 pom_licence_name=TwitterKit Agreement
-pom_licence_url=https://fabric.io/terms/twitter
+pom_licence_url=https://dev.twitter.com/overview/terms/twitterkit.html
+pom_licence_distribution=repo
 
+pom_organization=Twitter
+pom_organization_url=https://dev.twitter.com/
