--- a/twitter-core/internal-build.gradle
+++ b/twitter-core/internal-build.gradle
@@ -17,7 +17,6 @@
 
 apply plugin: 'com.android.library'
 apply from: rootProject.qualityScript
-apply from: rootProject.deployScript
 apply plugin: io.fabric.gradle.weaving.ArtifactSizePlugin
 apply plugin: io.fabric.gradle.weaving.DexMethodCountPlugin
 
@@ -28,6 +27,8 @@ android {
     defaultConfig {
         versionCode 1
         versionName version
+        group pom_group_id
+
         minSdkVersion rootProject.minSdkVersion
         consumerProguardFiles 'proguard.txt'
     }
@@ -104,3 +105,5 @@ dependencies {
     }
     testCompile dependency.equalsVerifier
 }
+
+apply from: rootProject.deployScript
