--- a/twitter-unity/internal-build.gradle
+++ b/twitter-unity/internal-build.gradle
@@ -17,7 +17,6 @@
 
 apply plugin: 'com.android.library'
 apply from: rootProject.qualityScript
-apply from: rootProject.deployScript
 apply plugin: 'io.fabric.gradle.unity'
 apply plugin: io.fabric.gradle.weaving.ArtifactSizePlugin
 apply plugin: io.fabric.gradle.weaving.DexMethodCountPlugin
@@ -29,6 +28,8 @@ android {
     defaultConfig {
         versionCode 1
         versionName version
+        group pom_group_id
+
         minSdkVersion rootProject.minSdkVersion
         consumerProguardFiles 'proguard.txt'
     }
@@ -85,3 +86,5 @@ dependencies {
         releaseCompile projectOrBinary(path: path, configuration: 'release', binary: binary)
     }
 }
+
+apply from: rootProject.deployScript
