--- a/samples/app/internal-build.gradle
+++ b/samples/app/internal-build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        jcenter()
+        maven { url 'https://artifactory-ci.twitter.biz/java-virtual'}
     }
 
     dependencies {
