Clean up gradle properties
Change-Id: I57c4dd3ca54e746484330f5d027fed0cde2520bb

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,9 @@ org.gradle.jvmargs=-Xms1024m -Xmx2048m -XX:MaxPermSize=1024m
 org.gradle.parallel=false
 org.gradle.configureondemand=true
 
-pom_url=
-pom_scm_url=
-pom_scm_connection=
-pom_scm_dev_connection=
-pom_description=
-pom_licence_name=
-pom_licence_url=
-pom_licence_dist=repo
-pom_developer_id=Twitter
-pom_developer_name=Twitter
+pom_licence_name=TwitterKit Agreement
+pom_licence_url=https://dev.twitter.com/overview/terms/twitterkit.html
+pom_licence_distribution=repo
+
+pom_organization=Twitter
+pom_organization_url=https://dev.twitter.com/
