Cleanup OSS project files
Change-Id: I5b53e52a6c3ec62d0c519589923ebe2d7b30685a

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ subprojects { Project subproject ->
     buildscript {
         repositories {
             jcenter()
+            maven { url 'https://maven.fabric.io/public' }
         }
         dependencies {
             classpath dependency.androidGradlePlugin
