--- a/tweet-ui/internal-build.gradle
+++ b/tweet-ui/internal-build.gradle
@@ -91,6 +91,7 @@ dependencies {
 
     compile dependency.picasso
     compile dependency.supportV4
+    compile dependency.recyclerview
 
     androidTestCompile dependency.retrofitMock
     androidTestCompile dependency.mockito
