Add BroadcastReceiver for cancelling Compose Tweet
Change-Id: Iea2b2e0d0e01ea5d2f4a4d2a0d00916739202794

--- a/samples/app/src/main/AndroidManifest.xml
+++ b/samples/app/src/main/AndroidManifest.xml
@@ -97,5 +97,13 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".tweetcomposer.TweetCancelReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.twitter.sdk.android.tweetcomposer.TWEET_COMPOSE_CANCEL"/>
+            </intent-filter>
+        </receiver>
+
     </application>
 </manifest>
