Update Twitter Kit build
Change-Id: Ib425ff05a0aa7839be87ab36da6f39e0577ef1a6

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ subprojects { Project subproject ->
     buildscript {
         repositories {
             jcenter()
+            google()
             maven { url 'https://maven.fabric.io/public' }
         }
         dependencies {
@@ -29,6 +30,7 @@ subprojects { Project subproject ->
     }
 
     repositories {
+        google()
         jcenter()
     }
 }
