--- a/twitter-mopub/build.gradle
+++ b/twitter-mopub/build.gradle
@@ -62,12 +62,13 @@ android {
 
     testOptions {
         unitTests.returnDefaultValues = true
+        unitTests.includeAndroidResources true
     }
 }
 
 dependencies {
 
-    compile (dependency.mopub) {
+    api (dependency.mopub) {
         transitive = true;
     }
 
