--- a/twitter-core/internal-build.gradle
+++ b/twitter-core/internal-build.gradle
@@ -1,3 +1,6 @@
+import io.fabric.gradle.weaving.ArtifactSizePlugin
+import io.fabric.gradle.weaving.DexMethodCountPlugin
+
 /*
  * Copyright (C) 2015 Twitter, Inc.
  *
@@ -17,8 +20,8 @@
 
 apply plugin: 'com.android.library'
 apply from: rootProject.qualityScript
-apply plugin: io.fabric.gradle.weaving.ArtifactSizePlugin
-apply plugin: io.fabric.gradle.weaving.DexMethodCountPlugin
+apply plugin: ArtifactSizePlugin
+apply plugin: DexMethodCountPlugin
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -88,10 +91,10 @@ android {
 }
 
 dependencies {
-    compile dependency.retrofit
-    compile dependency.retrofitGsonConverter
-    compile dependency.gson
-    compile dependency.okHttp
+    api dependency.retrofit
+    implementation dependency.retrofitGsonConverter
+    api dependency.gson
+    api dependency.okHttp
 
     androidTestCompile dependency.mockito
     androidTestCompile dependency.dexmakerMockito
