--- a/tweet-ui/internal-build.gradle
+++ b/tweet-ui/internal-build.gradle
@@ -93,7 +93,8 @@ dependencies {
     }
 
     implementation dependency.picasso
-    implementation dependency.supportV4
+    implementation dependency.supportCoreV4
+    implementation dependency.supportCompatV4
     implementation dependency.recyclerview
 
     androidTestCompile dependency.retrofitMock
