--- a/twitter-mopub/build.gradle
+++ b/twitter-mopub/build.gradle
@@ -69,7 +69,7 @@ android {
 dependencies {
 
     api (dependency.mopub) {
-        transitive = true;
+        transitive = true
     }
 
     testCompile dependency.mockito
