--- a/twitter-mopub/internal-build.gradle
+++ b/twitter-mopub/internal-build.gradle
@@ -79,7 +79,7 @@ android {
 
 dependencies {
     api (dependency.mopub) {
-        transitive = true;
+        transitive = true
     }
 
     testCompile dependency.mockito
